# interval_capture

./: .gitignore  CMakeLists.txt  ImagePost.cpp  ImagePost.h  README.md  main.cpp
